# DevelopsTodayNewsBoardTestTask

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  nginx.conf  pyproject.toml  requirements.txt
news/: admin.py  models.py  serializers.py  urls.py  views.py
news/jobs/daily/: reset_upvotes.py
news/management/commands/: initadmin.py
news/migrations/: 0001_initial.py  0002_postimage.py
newsboard/: asgi.py  settings.py  urls.py  wsgi.py
